<resources>
    <string name="app_name">F1 App</string>
    <string name="main_racing">RACING</string>
    <string name="main_drivers">DRIVERS</string>
    <string name="main_constructors">CONSTRUCTORS</string>
    <string name="main_standing">STANDINGS</string>
    <string name="first_team_entry">First Team Entry</string>
    <string name="chassis">Chassis</string>
    <string name="powerUnit">Power Unit</string>
    <string name="teamChief">Team Chief</string>
    <string name="constructorChampionships">Constructor Championships</string>
    <string name="polePositions">Pole Positions</string>
    <string name="highestFinish">Highest Finish</string>
    <string name="podiums">Podiums</string>
    <string name="fastestLap">Fastest Lap</string>
    <string name="worldChampoionships">World Champoion ships</string>
    <string name="GPsEntered">GPs Entered</string>
    <string name="team">Team</string>
    <string name="country">Country</string>
    <string name="placeBirth">Place Birth</string>
    <string name="dateBirth">Date Birth</string>
    <string name="Stats">Stats</string>
    <string name="Bio">Bio</string>
    <string name="Drivers">Drivers</string>
    <string name="Constructors">Constructors</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="circuit_length_title">Circuit length</string>
    <string name="distance_unit_km">KM</string>
    <string name="lap_record_title">Lap record</string>
    <string name="view_results_button">VIEW RESULTS</string>
    <string name="relive_the_action">RELIVE THE ACTION</string>
    <string name="race">Race</string>
    <string name="see_highlights_and_standing">See highlights and standing</string>
    <string name="race_result_title">RACE RESULT</string>
    <string name="recycler_view_header_pos">POS</string>
    <string name="recycler_view_header_driver">DRIVER</string>
    <string name="recycler_view_header_time_ret">TIME/RET</string>
    <string name="recycler_view_header_pts">PTS</string>
    <string name="race_distance_title">Race distance</string>
    <string name="grand_prix_weekend">GRAND PRIX WEEKEND</string>
    <string name="days">DAYS</string>
    <string name="hrs">HRS</string>
    <string name="mins">MINS</string>
    <string name="rolex_logo">rolex logo</string>
    <string name="Upcoming">Upcoming</string>
    <string name="Past">Past</string>
    <string name="Schedule">Schedule</string>
    <string name="Circuit">Circuit</string>
    <string name="race_weekend">RACE WEEKEND</string>
    <string name="next">next</string>
    <string name="dialogExit">Do you want to exit ?</string>
    <string name="dialogAlert">Alert !</string>
    <string name="dialogYes">Yes</string>
    <string name="dialogNo">No</string>
    <string name="main_latest">Latest</string>
    <string name="news">News</string>
    <string name="feature">Feature</string>
    <string name="news_lawsonTitle">Why Red Bull chose Lawson instead of Tsunoda as Perez\'s replacement</string>
    <string name="news_bottasTitle">Bottas to re-join Mercedes as reserve driver in 2025</string>
    <string name="news_perezTitle">Perez and Red Bull agree to part ways following conclusion of 2024 season</string>
    <string name="news_lawsonContent">Liam Lawson will become the latest Red Bull junior to get a shot at the big time and partner four-time world champion Max Verstappen at the energy drinks firm’s works outfit. Why did he get the nod over RB team mate Yuki Tsunoda? F1 Correspondent Lawrence Barretto explains…\n\n

As the pressure piled up on Sergio Perez’s shoulders approaching the summer break, it was Daniel Ricciardo’s name that was most heavily linked to being his replacement when Red Bull eventually wielded the axe.\n\n


Sources say Red Bull were looking to put the Australian in the car when the season resumed – only to change their mind and keep faith in Perez – whom they had given a new contract earlier in the year.\n\n

Ricciardo’s star then quickly faded and it was Lawson – Ricciardo’s permanent replacement from the United States Grand Prix onwards – who became the frontrunner rather than his team mate Tsunoda.\n\n

This was despite Tsunoda enjoying his most impressive season to date, albeit in his fourth campaign with Red Bull’s sister team RB.</string>
    <string name="news_bottasContent">Mercedes have announced that Valtteri Bottas will return to the team as a reserve driver for the 2025 season, after the Finn and Kick Sauber parted company following the 2024 Abu Dhabi Grand Prix.\n\n

Bottas drove for Mercedes for five seasons alongside Lewis Hamilton from 2017-2021, securing all 10 of his career wins with the Silver Arrows, as well as his 20 pole positions in Formula 1.\n\n


He would then join Sauber, known as Alfa Romeo at the time, for the 2022 season after Mercedes chose to promote George Russell in his place, the Finn enduring mixed fortunes with the Swiss team ranging from finishing a strong 10th in 2022 to failing to score at all in 2024.\n\n

When Kick Sauber opted not to re-sign Bottas for 2025 – instead choosing a combination of Nico Hulkenberg and Brazilian rookie Gabriel Bortoleto – the Finn began talks with Mercedes about a reserve role in a bid to stay in the conversation as he pursues a racing return in 2026.</string>
    <string name="news_perezContent">Sergio Perez and Red Bull have reached an agreement to part ways with immediate effect.\n\n

Earlier this year, Perez signed a new deal to race for the team until the end of 2026 – on the back of his strongest season ever in 2023, when he finished second to team mate and champion Max Verstappen.\n\n

However, his form tailed off after signing that deal, and the Mexican scored just nine points in the last eight Grand Prix weekends of the 2024 season.\n\n

He ended up down in eighth in the drivers’ championship, with Red Bull failing to defend their constructors’ championship and seeing out the season in P3 behind champions McLaren and runners-up Ferrari.\n\n

Throughout the difficult period, Perez remained resolute that he would race for the team next year, but following discussions with Red Bull, they’ve agreed to split after four years together.</string>
    <string name="number_of_laps">Number of laps</string>
    <string name="first_grand_prix">First grand prix</string>
    <string name="championship_standing">Championship standing</string>
    <string name="round">Round</string>
    <string name="pts">pts</string>
    <string name="ID1">Born in London but racing under the flag of Thailand, Alexander Albon\'s first word was in fact Italian. That word was Ferrari – though it was with another Italian team that he got his big F1 break.\n\nIdolising Michael Schumacher and dreaming of one day racing in Formula 1, the junior Albon was pipped to the 2016 GP3 title by a certain Charles Leclerc. He then left his great friendship with George Russell trackside as he took the 2018 Formula 2 title fight down to the wire.\n\nGraduating to the F1 big league along with yet another contemporary – Lando Norris – in 2019, Albon did his talking on track with Toro Rosso in the opening races, earning a mid-season promotion to Red Bull Racing.\n\nA stylish overtaker with a championship mentality, Albon was unfazed by partnering Max Verstappen for the second half of his rookie season, taking top-six finishes in eight of his nine 2019 races with Red Bull.\n\nStaying in touch with the future champion proved tougher in 2020 and Red Bull dropped him from their race line-up. Crucially, though, Albon was retained as test and reserve driver, keeping him very much on team bosses\' radar, leading to his 2022 return to the grid with Williams, where he has established a reputation as a fast qualifier and mature racer.\n\nLaidback and cheerful with a cheeky grin, the Thai driver is popular among his peers – not always easy in motorsport\'s cauldron of competition – but you don\'t succeed in Formula 1 by being popular. Albon\'s challenge remains a big one – to make the most of a rare second F1 opportunity.</string>
    <string name="ID2">He\'s the matador from Madrid racing royalty.\n\nAfter entering F1\'s Bull Ring paired alongside Max Verstappen at Toro Rosso in 2015, Sainz quickly showed his fighting spirit. A tenacious racer, he puts the car on the edge as he hustles his way through the pack. No wonder Sainz has earned the nickname Chilli.\n\nBut the Spaniard is intelligent as well as instinctive, thinking his way through a race and into the points. This calm temperament follows him off track where he remains unfazed by the pressures of forging a Grand Prix career with a famous name.\n\nSainz is the son of double World Rally champion, also his namesake, and has brought some of Dad\'s driving skills to the F1 circuit – junior loves a delicious dose of drift for one.\n\nAfter following in his famous father\'s tyre tracks, Sainz has had big racing boots to fill – first at McLaren where he replaced his childhood hero Fernando Alonso, and now at Ferrari, in the seat formerly owned by Sebastian Vettel.\n\nIt is never easy living in the shadow of sporting giants, but Sainz has shown the drive and disposition to deal with it - he has scored a Grand Prix victory in both his Scuderia seasons to date. Vamos!</string>
    <string name="ID3">Born in the Mediterranean idyll of Monaco, Leclerc arrived in F1 on a tidal wave of expectation.\n\nPractically peerless on his way to the GP3 and Formula 2 crowns, he showcased a dazzling array of skills from scorching pole positions, commanding victories – even when his car caught fire twice at Silverstone – to an ability to muscle his way through the pack. Winning back-to-back championships also taught Leclerc how to handle pressure, another useful tool in the big pond of Formula 1 racing.\n\nStepping up to F1 in 2018, Leclerc showed flashes of ballistic pace on Saturdays and racing brilliance on Sundays, dragging his Sauber beyond its limits – and earning himself a money-can\'t-buy race seat at Ferrari for 2019, stepping into the shoes of the Scuderia\'s last world champion, Kimi Raikkonen.\n\nThere he immediately put the cat among the proverbial pigeons, unafraid to go wheel-to-wheel with established number one, Sebastian Vettel. A maiden F1 victory at Spa was followed by another a week later on Ferrari\'s hallowed home turf of Monza. The tifosi had found another new hero – who then became the first man to out-score Vettel over a season with the Scuderia, a feat he repeated in crushing fashion the following year.\n\nThe 2020 and \'21 seasons bore little fruit for Ferrari, but Leclerc maintained his resolve to emerge a true title contender in 2022. With three wins, 11 podiums and nine pole positions, he was the only man able to consistently take the fight to champion Max Verstappen - a feat he and the Scuderia were sadly unable to repeat in 2023.\n\nOut of the car, Leclerc is modest and thoughtful - but then he is on his own very personal mission. This exciting young talent is racing for his late father Herve and his friend and mentor Jules Bianchi, the F1 driver who died in 2015.\n\nOn the evidence so far, he is doing them both proud.</string>
</resources>