<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rolexGreen">
    
    <TextView
        style="@style/headerFont"
        android:id="@+id/grandPrixWeekend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grand_prix_weekend"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rolex"
        android:paddingVertical="5dp" />
    
    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/grandPrixWeekend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rolex"
        android:layout_marginStart="20dp" />
    
    <LinearLayout
        android:id="@+id/days"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintHeight_percent="0.7"
        android:layout_marginHorizontal="20dp"
        android:gravity="center">

        <TextView
            style="@style/rolexNumbers"
            android:id="@+id/daysTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days"
            android:textSize="10sp"
            android:textColor="@color/white"
            android:gravity="center"/>
    </LinearLayout>

    <View
        android:id="@+id/viewVertical1"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintStart_toEndOf="@id/days"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintHeight_percent="0.5"
        android:layout_marginTop="13dp"
        android:layout_marginHorizontal="20dp"/>

    <LinearLayout
        android:id="@+id/hours"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintStart_toEndOf="@id/viewVertical1"
        app:layout_constraintHeight_percent="0.7"
        android:layout_marginHorizontal="20dp"
        android:gravity="center">

        <TextView
            style="@style/rolexNumbers"
            android:id="@+id/hoursTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hrs"
            android:textSize="10sp"
            android:textColor="@color/white"
            android:gravity="center"/>
    </LinearLayout>

    <View
        android:id="@+id/viewVertical2"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintStart_toEndOf="@id/hours"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintHeight_percent="0.5"
        android:layout_marginTop="13dp"
        android:layout_marginHorizontal="20dp"/>

    <LinearLayout
        android:id="@+id/mins"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintStart_toEndOf="@id/viewVertical2"
        app:layout_constraintHeight_percent="0.7"
        android:layout_marginHorizontal="22dp"
        android:gravity="center">

        <TextView
            style="@style/rolexNumbers"
            android:id="@+id/minsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mins"
            android:textSize="10sp"
            android:textColor="@color/white"
            android:gravity="center"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/rolex"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.3"
        android:gravity="center">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/rolex_logo"
            android:src="@drawable/rolex_logo" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>